--- a/src/Tippy/Pages/Blocks/_Transaction.cshtml
+++ b/src/Tippy/Pages/Blocks/_Transaction.cshtml
@@ -7,7 +7,7 @@
     <hr />
 
     <div style="border-bottom:solid 1px #808080;" class="py-2 my-2">
-        <a asp-page="/Explorer" asp-route-ref="transaction/@tx.TransactionHash" class="hash-text">
+        <a asp-page="/Transactions/Details" asp-route-txhash="@tx.TransactionHash" class="hash-text">
             @tx.TransactionHash
         </a>
     </div>
