Delete Explorer page

--- a/src/Tippy/Pages/Transactions/Index.cshtml
+++ b/src/Tippy/Pages/Transactions/Index.cshtml
@@ -45,7 +45,7 @@
     </table>
 
     <nav class="pagination is-centered" role="navigation" aria-label="pagination">
-        <a asp-page="/Explorer" asp-route-ref="transaction/list" class="pagination-next">More</a>
+        <a class="pagination-next">More(TODO)</a>
     </nav>
 }
 else
