Delete some api controllers used by explorer

--- a/src/Tippy/Pages/Transactions/Details.cshtml
+++ b/src/Tippy/Pages/Transactions/Details.cshtml
@@ -68,6 +68,8 @@
     </div>
 </div>
 
+<div>TODO: tx detail</div>
+
 <div class="box transaction-box">
     <h2>Inputs (@Model.TransactionDetail.DisplayInputs.Length)</h2>
     <hr />
