--- a/src/Tippy/Pages/Transactions/Details.cshtml
+++ b/src/Tippy/Pages/Transactions/Details.cshtml
@@ -66,9 +66,58 @@
             </div>
         </div>
     </div>
-</div>
 
-<div>TODO: tx detail</div>
+    <div>
+        <h2 class="title is-4">CellDeps</h2>
+        <div>
+            @foreach(var dep in Model.TransactionDetail.CellDeps)
+            {
+                <div class="columns is-multiline m-4">
+                    <div class="column is-2 p-0">OutPoint.TxHash</div>
+                    <div class="column is-10 p-0">
+                        <a asp-page="/Transactions/Details" asp-route-txhash="@dep.OutPoint.TxHash" class="hash-text">
+                            @dep.OutPoint.TxHash
+                        </a>
+                    </div>
+
+                    <div class="column is-2 p-0">OutPoint.Index</div>
+                    <div class="column is-10 p-0">@dep.OutPoint.Index</div>
+
+                    <div class="column is-2 p-0">DepType</div>
+                    <div class="column is-10 p-0">@dep.DepType</div>
+                </div>
+            }
+        </div>
+
+        <h2 class="title is-4">HeaderDeps</h2>
+        <div>
+            <div class="columns is-multiline m-4">
+                @foreach (var dep in Model.TransactionDetail.HeaderDeps)
+                {
+                    <div class="column is-2 p-0">HeaderDep</div>
+                    <div class="column is-10 p-0">
+                        <a asp-page="/Blocks/Details" asp-route-id="@dep">
+                            @dep
+                        </a>
+                    </div>
+                }
+            </div>
+        </div>
+
+        <h2 class="title is-4">Witnesses</h2>
+        <div>
+            <div class="columns is-multiline m-4">
+                @foreach (var witness in Model.TransactionDetail.Witnesses)
+                {
+                    <div class="column is-2 p-0">Witness</div>
+                    <div class="column is-10 p-0">
+                        @witness
+                    </div>
+                }
+            </div>
+        </div>
+    </div>
+</div>
 
 <div class="box transaction-box">
     <h2>Inputs (@Model.TransactionDetail.DisplayInputs.Length)</h2>
