--- a/src/Tippy/wwwroot/css/site.css
+++ b/src/Tippy/wwwroot/css/site.css
@@ -6,6 +6,14 @@ body {
     height: 100%;
 }
 
+.hero .navbar {
+    background-color: #44475a;
+}
+
+.aside {
+    height: calc(100vh - 2rem);
+}
+
 .button.is-primary-override {
     background-color: #00CC9B;
 }
