Change epoch current label text to block index

--- a/src/Tippy/Pages/Home/Index.cshtml
+++ b/src/Tippy/Pages/Home/Index.cshtml
@@ -141,7 +141,7 @@
                 <div class="box" style="background-color: #6C5054">
                     <div class="heading">Epoch</div>
                     <div class="title">@Hex.HexToUInt64(Model.EpochView!.Number)</div>
-                    <div class="heading">Current</div>
+                    <div class="heading">Block Index</div>
                     @{ var current = Model.TipBlockNumber - Hex.HexToUInt64(Model.EpochView!.StartNumber) + 1; }
                     <div class="title is-5">@current</div>
                     <div class="heading">Length</div>
