Change concept of projec to chain

--- a/src/Tippy/Pages/Home/Index.cshtml
+++ b/src/Tippy/Pages/Home/Index.cshtml
@@ -24,7 +24,7 @@
       </span>
     </div>
 
-    <p class="mt-4 mb-6">You don’t have any chain/project. To get started, you can...</p>
+    <p class="mt-4 mb-6">You haven't set up any chain yet. To get started, you can...</p>
 
     <form class="my-4" asp-page="./QuickStart" method="post">
         <button class="button is-primary is-primary-button">
