--- a/src/Tippy/Pages/Projects/Create.cshtml
+++ b/src/Tippy/Pages/Projects/Create.cshtml
@@ -1,9 +1,9 @@
 ﻿@page
 @model Tippy.Pages.Projects.CreateModel
 
-@{ ViewData["Title"] = "Create project"; }
+@{ ViewData["Title"] = "Create chain"; }
 
-<h1 class="title">Create project</h1>
+<h1 class="title">Create chain</h1>
 
 <div class="container">
     <div class="columns">
