--- a/src/Tippy/Pages/Projects/Details.cshtml
+++ b/src/Tippy/Pages/Projects/Details.cshtml
@@ -1,9 +1,9 @@
 ﻿@page
 @model Tippy.Pages.Projects.DetailsModel
 
-@{ ViewData["Title"] = "Project details"; }
+@{ ViewData["Title"] = "Chain details"; }
 
-<h1 class="title">Project details</h1>
+<h1 class="title">Chain details</h1>
 
 <div class="container">
     <div class="columns">
