--- a/src/Tippy/Pages/Projects/Edit.cshtml
+++ b/src/Tippy/Pages/Projects/Edit.cshtml
@@ -1,9 +1,9 @@
 ﻿@page
 @model Tippy.Pages.Projects.EditModel
 
-@{ ViewData["Title"] = "Edit project"; }
+@{ ViewData["Title"] = "Edit chain"; }
 
-<h1 class="title">Edit project</h1>
+<h1 class="title">Edit chain</h1>
 
 <div class="container">
     <div class="columns">
