--- a/src/Tippy/Pages/Projects/Index.cshtml
+++ b/src/Tippy/Pages/Projects/Index.cshtml
@@ -1,15 +1,15 @@
 ﻿@page
 @model Tippy.Pages.Projects.IndexModel
 
-@{ ViewData["Title"] = "Projects"; }
+@{ ViewData["Title"] = "Chains"; }
 
 <div class="level">
     <div class="level-left">
-        <h1 class="title">Projects</h1>
+        <h1 class="title">Chains</h1>
     </div>
     <div class="level-right">
         <a asp-page="Create" class="button is-primary is-primary-button">
-            <span class="icon"> <i class="fa fa-plus"></i> </span><span>Create new project</span>
+            <span class="icon"> <i class="fa fa-plus"></i> </span><span>Create new chain</span>
         </a>
     </div>
 </div>
