--- a/src/Tippy/Pages/Projects/Delete.cshtml
+++ b/src/Tippy/Pages/Projects/Delete.cshtml
@@ -1,16 +1,16 @@
 ﻿@page
 @model Tippy.Pages.Projects.DeleteModel
 
-@{ ViewData["Title"] = "Delete project"; }
+@{ ViewData["Title"] = "Delete chain"; }
 
 <div class="modal is-active">
     <div class="modal-background"></div>
     <div class="modal-card">
         <header class="modal-card-head">
-            <p class="modal-card-title">Delete project</p>
+            <p class="modal-card-title">Delete chain</p>
         </header>
         <section class="modal-card-body has-background-danger">
-            <p>Are you sure you want to delete project <strong>@Html.DisplayFor(model => model.Project.Name)</strong>?</p>
+            <p>Are you sure you want to delete chain <strong>@Html.DisplayFor(model => model.Project.Name)</strong>?</p>
         </section>
         <footer class="modal-card-foot">
             <form method="post" class="mt-4" style="width: 100%;">
