--- a/src/Tippy/Pages/Projects/Reset.cshtml
+++ b/src/Tippy/Pages/Projects/Reset.cshtml
@@ -1,16 +1,16 @@
 ﻿@page
 @model Tippy.Pages.Projects.ResetModel
 
-@{ ViewData["Title"] = "Reset project data"; }
+@{ ViewData["Title"] = "Reset chain data"; }
 
 <div class="modal is-active">
     <div class="modal-background"></div>
     <div class="modal-card">
         <header class="modal-card-head">
-            <p class="modal-card-title">Reset project data</p>
+            <p class="modal-card-title">Reset chain data</p>
         </header>
         <section class="modal-card-body has-background-danger">
-            <p>Are you sure you want to reset all data for project <strong>@Html.DisplayFor(model => model.Project.Name)</strong>?</p>
+            <p>Are you sure you want to reset all data for chain <strong>@Html.DisplayFor(model => model.Project.Name)</strong>?</p>
         </section>
         <footer class="modal-card-foot">
             <form method="post" class="mt-4" style="width: 100%;">
