--- a/src/Tippy/Pages/Shared/_Layout.cshtml
+++ b/src/Tippy/Pages/Shared/_Layout.cshtml
@@ -23,7 +23,7 @@
                         <div class="project-menu-link level m-2">
                             <div class="level-left">
                                 <div>
-                                <div class="heading my-0">Project</div>
+                                <div class="heading my-0">Chain</div>
                                 @{ 
                                     var projectName = Model.ActiveProject?.Name ?? "NA";
                                 }
@@ -60,7 +60,7 @@
                               <hr class="navbar-thin-divider" />
                               <a asp-page="/Projects/Index" class="button is-dark">
                                   <span class="icon"><i class="fas fa-layer-group"></i></span>
-                                  <span>Manage Projects</span>
+                                  <span>Manage Chains</span>
                               </a>
                             </div>
                         </div>
@@ -204,7 +204,7 @@
                         <li>
                             <a asp-page="/Projects/Index">
                                 <span class="icon is-small"><i class="fas fa-layer-group"></i></span>
-                                <span class="menu-text">Projects</span>
+                                <span class="menu-text">Chains</span>
                             </a>
 
                         </li>
