--- a/src/Tippy/Pages/Shared/_NoActiveProject.cshtml
+++ b/src/Tippy/Pages/Shared/_NoActiveProject.cshtml
@@ -4,5 +4,5 @@
             <i class="fas fa-exclamation-triangle fa-3x"></i>
         </span>
     </p>
-    <p>Current project/chain is not running. Please <a asp-page="/Home/Index">start</a> and select a project first.</p>
+    <p>No chain is running. Please <a asp-page="/Home/Index">start</a> and select a chain first.</p>
 </div>
