Adding sophisticated mining page

--- a/src/Tippy/Pages/Home/Index.cshtml
+++ b/src/Tippy/Pages/Home/Index.cshtml
@@ -128,6 +128,9 @@
                                 </button>
                             </div>
                         </form>
+                        <p>
+                            <a asp-page="/Miners/Advanced" class="has-text-primary-dark">Advanced mining</a>
+                        </p>
                     }
                 }
                 else
