Pass project id to advanced mining page, create empty generate multiple blocks page

--- a/src/Tippy/Pages/Home/Index.cshtml
+++ b/src/Tippy/Pages/Home/Index.cshtml
@@ -129,7 +129,7 @@
                             </div>
                         </form>
                         <p>
-                            <a asp-page="/Miners/Advanced" class="has-text-primary-dark">Advanced mining</a>
+                            <a asp-page="/Miners/Advanced" asp-route-id="@Model.ActiveProject.Id" class="has-text-primary-dark">Advanced mining</a>
                         </p>
                     }
                 }
