--- a/src/Tippy/Pages/Shared/_Layout.cshtml
+++ b/src/Tippy/Pages/Shared/_Layout.cshtml
@@ -77,7 +77,7 @@
                         <div class="title is-6">@Model.TipBlockNumber</div>
                     }
                     else
-                    { 
+                    {
                         <div class="title is-6">NA</div>
                     }
                 </div>
@@ -143,24 +143,28 @@
                     <span class="=navbar-item">
                         <span class="nav-separator"></span>
                     </span>
+                    <div class="dropdown is-hoverable is-right">
+                        <div class="dropdown-trigger">
+                            <span class="button is-dark my-1 mx-2 has-dropdown"aria-haspopup="true" aria-controls="dropdown-menu-process-info">
+                                <span class="icon is-small"><i class="fas fa-info"></i></span>
+                            </span>
+                        </div>
+                        <div class="dropdown-menu" id="dropdown-menu-process-info" role="menu" style="width: 280px ">
+                            <div class="dropdown-content" style="background-color: #7F519C;">
+                               <div class="dropdown-item">
+                                @{
+                                    foreach (var info in Model.ProcessInfo.Split("\n"))
+                                    {
+                                        <p>@info</p>
+                                    }
+                                }
+                               </div>
+                            </div>
+                        </div>
+                    </div>
                     <a class="button is-dark my-1 mx-2" asp-page="/Config/Index">
                         <span class="icon is-small"><i class="fas fa-cog"></i></span>
                     </a>
-                    <!--
-                    <a class="navbar-item nav-tag">
-                        <span class="icon is-small">
-                            <i class="far fa-envelope animated"></i>
-                        </span>
-                        <span class="tag is-success counter">2</span>
-                    </a>
-                    <a class="navbar-item nav-tag">
-                        <span class="icon is-small">
-                            <i class="far fa-bell animated"></i>
-                        </span>
-                        <span class="tag is-danger counter">6</span>
-                    </a>
-                    -->
-
                 </div>
             </nav>
         </div>
