Add clear tx pool feature

--- a/src/Tippy/Pages/Blocks/Details.cshtml
+++ b/src/Tippy/Pages/Blocks/Details.cshtml
@@ -6,7 +6,7 @@
 
 <div class="my-2">
     <form method="post">
-        <button asp-page="./RollBackTo" asp-route-hash="@Model.BlockDetail.BlockHash" class="button is-danger is-small" title="Roll back to this block">
+        <button asp-page="./RollBackTo" asp-route-hash="@Model.BlockDetail.BlockHash" class="button is-danger" title="Roll back to this block">
             <span class="icon">
                 <i class="fas fa-cut"></i>
             </span>
