--- a/src/Tippy/Pages/TxPool/Index.cshtml
+++ b/src/Tippy/Pages/TxPool/Index.cshtml
@@ -7,7 +7,16 @@
 
 @if (Model.ActiveProject != null && ProcessManager.IsRunning(Model.ActiveProject))
 {
-    <p>TODO</p>
+    <div class="my-2">
+        <form method="post">
+            <button asp-page="./Clear" class="button is-danger" title="Clear tx tppl">
+                <span class="icon">
+                    <i class="fas fa-eraser"></i>
+                </span>
+                <span>Clear Tx Pool</span>
+            </button>
+        </form>
+    </div>
 }
 else
 {
